OPA-ConstraintTemplate-Policy.yaml
apiVersion: templates.gatekeeper.sh/v1
kind: ConstraintTemplate
metadata:
  name: workflowLabel
spec:
  crd:
    spec:
      names:
        kind: workflowLabel
  targets:
    - target: admission.k8s.gatekeeper.sh
      rego: |
        package workflowLabel
        violation[{"msg": msg}] {
          not input.review.object.metadata.labels["workflow"]
          msg := "Workflow label is required"
        }
